2011-03-05
* fold walktempdir() into scan()
* remove some clashes between names of variables and built-in function for
clarity

2011-03-04
* rework GIF scanning so we don't unnecessarily loop: merge searchUnpackGIF
and unpackGIF, add extra checks.

2011-03-02
* first copy the file to scan to the temporary scanning directory
* start on reworking hierachical unpacking which will make it easier to find
where and how things were unpacked.
* add more hierarchical unpacking
* unpack squashfs to the temporary directory directly, without having
unsquashfs create the 'squashfs-root' directory
* add speedups for GIF images, also fix a few indexing bugs, argh.

2011-02-28
* add a 'noscan' attribute for directories that don't need extra 'unpack'
scans for its contents
* add 'noscan' for unpacking GIF
* reenable GIF

2011-02-27
* disable GIF scanning due to endless looping. We should start marking certain
files as 'noscan' to avoid looping.
* add giflib-utils as a dependency for the RPM
* rework blacklisting, so we don't overload the datastructure for passing on
the results.
* remove Dutchims
* add yaffs2 unpacking, not enabled by default

2011-02-26
* don't exclude files to scan. The unpack scripts should be able to handle
this nicely.

2011-02-25
* don't clear the blacklist by accident
* start on extracting GIF images
* add extraction of GIF images
* fix another bug in blacklisting

2011-02-23
* fix some bugs in unpacking RAR
* rework scanning for EXE files. Currently only grabs files that can be
unpacked with RAR.
* add unpack7z for use in exe unpacking. Still need to rework generic 7z
unpacking itself.

2011-02-22
* rework unpacking for CAB
* give 7zip more priority than other scans such as CAB to prevent duplicate
scanning
* add blacklisting to 7z. This is very crude and needs to be reworked.

2011-02-21
* add unpacking for ARJ
* fix small bug in ubifs searching

2011-02-20
* fix XZ unpacking
* fix unsquashfs unpacking encountering a sqsh we can't unpack yet

2011-02-18